--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -64,5 +64,41 @@
     fill: rgb(231, 234, 238);
   }
 
+  &__input{
+    border: 1px solid #e8ebeb;
+    padding: 12px 16px;
+    padding-bottom: 16px;
+    margin-bottom: 14px;
+    height: 46;
+    width: 346;
+    border-radius: 4px;
+  }
+  &__continue {
+    font-weight: 600;
+    font-size: 16px;
+    color: #fff;
+    background-color: #00ccbc;
+    height: 48px;
+    margin-top: 14px;
+    margin-bottom: 14px;
+  }
+
+  &__forgot {
+    border: 1px solid #e8ebeb;
+    background-color: #fff;
+    color: #00b8a9;
+    font-weight: 400;
+    height: 48px;
+    margin-top: 14px;
+    margin-bottom: 14px;
+  }
+
+  &__h1 {
+    color: #2e3333;
+    font-family: plex-sans,sans-serif;
+    font-size: 22px;
+    line-height: 28px;
+    font-weight: 700;
+  }
 
   }
