--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -52,5 +52,10 @@
   &__location-search {
     border-radius: 100px;
   }
+
+  &__input {
+    width: fit-content;
+    padding-right: 83px;
+  }
 }
 
