--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -41,11 +41,12 @@
     <div
       class="col-12 col-md-5 d-flex justify-content-center flex-column align-item-center"
     >
-      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+      <form (ngSubmit)="onSubmit(f)">
         <h1 class="dc__h1">Sign up or log in</h1>
         <div class="dc__inputfield">
           <p>Email address</p>
           <div class="row">
+            <
             <input
               class="form-control dc__input"
               type="email"
@@ -61,7 +62,7 @@
               mat-button
               type="submit"
               class="dc__continue"
-              [disabled]="!f.valid"
+              [disabled]="f.invalid"
             >
               Continue
             </button>
