--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,8 @@
               height="32px"
             />
           </a>
-          <button mat-button class="dc__x-icon" (click)="sidenav.close()">
-            <a href="">
+          <button mat-button class="dc__x-icon" (click)="drawer.toggle()">
+            <a>
               <img src="assets\svg\x-icon.svg" alt="X" height="24" width="24" />
             </a>
           </button>
@@ -89,9 +89,7 @@
       </div>
     </div>
   </mat-drawer>
-
   <div class="example-sidenav-content">
-    <button type="button" mat-button (click)="drawer.toggle()"></button>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
   </div>
