--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -23,9 +23,9 @@
                       />
                     </button>
                     <input
+                      class="dc__input"
                       matInput
                       placeholder="e.g. EC4R 3TE"
-                      style="width: fit-content"
                     />
                     <button mat-button class="dc__searchbtn">Search</button>
                   </mat-form-field>
