--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -13,8 +13,8 @@
             >
             <div class="dc__button-container">
               <div class="row d-flex">
-                <p>
-                  <mat-form-field appearance="fill" class="dc__searchbar">
+                <div class="container">
+                  <p>
                     <button class="dc__nav-svg-btn">
                       <img
                         src="assets\svg\navigation.svg"
@@ -28,8 +28,8 @@
                       placeholder="e.g. EC4R 3TE"
                     />
                     <button mat-button class="dc__searchbtn">Search</button>
-                  </mat-form-field>
-                </p>
+                  </p>
+                </div>
               </div>
             </div>
             <span class="dc__login-white-text"
