--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -36,17 +36,17 @@
     </div>
   </div>
 </div>
-<div class="container p-5" *ngIf="showSignup">
+<div class="container p-5" *ngIf="!showLogin">
   <div class="row d-flex justify-content-center">
     <div
       class="col-12 col-md-5 d-flex justify-content-center flex-column align-item-center"
     >
-      <form (ngSubmit)="onSubmit(f)">
+      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
         <h1 class="dc__h1">Sign up or log in</h1>
         <div class="dc__inputfield">
           <p>Email address</p>
           <div class="row">
-            <
+
             <input
               class="form-control dc__input"
               type="email"
