feat: search bar
search bar fixing

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -29,6 +29,18 @@
                     />
                     <button mat-button class="dc__searchbtn">Search</button>
                   </p>
+                  <div class="input-group">
+                    <button class="btn btn-outline-secondary" type="button"  aria-expanded="false"><img
+                      src="assets\svg\navigation.svg"
+                      alt="nav-icon"
+                      height="15px"
+                    /></button>
+                    <input type="text"
+                    class="form-control"
+                    aria-label="Text input with 2 dropdown buttons"
+                    placeholder="e.g. EC4R 3TE">
+                    <button mat-button class="dc__searchbtn">Search</button>
+                  </div>
                 </div>
               </div>
             </div>
