feat: nav bar default country  set as uk
In the menu section in select country input United Kingdom set as default country

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,7 +69,7 @@
         </div>
         <div class="row dc__countries">
           <mat-form-field>
-            <select matNativeControl required>
+            <select matNativeControl required [ngModel]="defaultCountry">
               <option value="australia">Australia</option>
               <option value="belgium">Belgium</option>
               <option value="france">France</option>
