--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -85,7 +85,7 @@
   &__forgot {
     border: 1px solid #e8ebeb;
     background-color: #fff;
-    color: #00b8a9;
+    // color: #00b8a9;
     font-weight: 400;
     height: 48px;
     margin-top: 14px;
