--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -41,7 +41,7 @@
     <div
       class="col-12 col-md-5 d-flex justify-content-center flex-column align-item-center"
     >
-      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+      <form (ngSubmit)="onSubmit(form)" #form="ngForm">
         <h1 class="dc__h1">Sign up or log in</h1>
         <div class="dc__inputfield">
           <p>Email address</p>
@@ -72,7 +72,7 @@
               mat-button
               type="submit"
               class="dc__continue"
-              [disabled]="f.invalid"
+              [disabled]="form.invalid"
             >
               Continue
             </button>
