feat: track your oder section
track your oder in home page fix

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -14,7 +14,7 @@
             <div class="dc__button-container">
               <div class="row d-flex">
                 <div class="container">
-                  <p>
+                  <!-- <p>
                     <button class="dc__nav-svg-btn">
                       <img
                         src="assets\svg\navigation.svg"
@@ -28,17 +28,31 @@
                       placeholder="e.g. EC4R 3TE"
                     />
                     <button mat-button class="dc__searchbtn">Search</button>
-                  </p>
+                  </p> -->
+                  <form action="">
+                    <button>search</button>
+                    <input type="text" placeholder="e.g. EC4R 3TE" />
+                    <button mat-button class="dc__searchbtn">Search</button>
+                  </form>
+
                   <div class="input-group">
-                    <button class="btn btn-outline-secondary" type="button"  aria-expanded="false"><img
-                      src="assets\svg\navigation.svg"
-                      alt="nav-icon"
-                      height="15px"
-                    /></button>
-                    <input type="text"
-                    class="form-control"
-                    aria-label="Text input with 2 dropdown buttons"
-                    placeholder="e.g. EC4R 3TE">
+                    <button
+                      class="btn btn-outline-secondary"
+                      type="button"
+                      aria-expanded="false"
+                    >
+                      <img
+                        src="assets\svg\navigation.svg"
+                        alt="nav-icon"
+                        height="15px"
+                      />
+                    </button>
+                    <input
+                      type="text"
+                      class="form-control"
+                      aria-label="Text input with 2 dropdown buttons"
+                      placeholder="e.g. EC4R 3TE"
+                    />
                     <button mat-button class="dc__searchbtn">Search</button>
                   </div>
                 </div>
@@ -51,6 +65,41 @@
               </p></span
             >
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <div class="d-flex dc__track-order">
+          <div class="column dc__toc">
+            <span>
+              <h2 class="dc__tocheading">Track orders to your door</h2>
+            </span>
+            <div>
+              <p class="dc__tocpara">
+                Get your favourite food delivered in a flash. You’ll see when
+                your rider’s picked up your order, and be able to follow them
+                along the way. You’ll get a notification when they’re nearby,
+                too.
+              </p>
+            </div>
+            <div>
+              <img
+                src="assets\svg\app store.svg"
+                alt=""
+                width="135px"
+                height="40px"
+              />
+              <img src="assets\svg\Google_Play_Store_badge_EN.svg" alt="" />
+            </div>
+            <div></div>
+          </div>
+          <img src="assets\svg\home\map.avif" alt="map" />
         </div>
       </div>
     </div>
