feat: home page ui
Fixing of Home Page Discount area and the cards

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<div class="container dc dc__background-color">
+<div class="dc dc__background-color">
   <div class="d-flex justify-content-center">
     <div class="col-12 col-md-5 flex-column align-item-center">
       <div class="row dc__lpgrow">
@@ -95,7 +95,12 @@
                 width="135px"
                 height="40px"
               />
-              <img src="assets\svg\Google_Play_Store_badge_EN.svg" alt="" />
+              <img
+                src="assets\svg\Google_Play_Store_badge_EN.svg"
+                alt=""
+                width="135px"
+                height="40px"
+              />
             </div>
             <div></div>
           </div>
@@ -104,4 +109,81 @@
       </div>
     </div>
   </div>
+</div>
+<br />
+<div>
+  <div class="d-flex dc__discount-area">
+    <div>
+      <h2 class="dc__discount-heading">Up to 25% off - Meal Deals</h2>
+    </div>
+    <div>
+      <p class="dc__discount-para1">
+        Need a midweek pick-me-up, a break from cooking for the family or just
+        fancy your favourite restaurant?
+      </p>
+    </div>
+    <div>
+      <p class="dc__discount-para2">
+        Service and delivery fees, subject to availability. Participating
+        restaurants only. T&Cs apply. <a href="">Terms</a>
+      </p>
+    </div>
+  </div>
+</div>
+<br />
+<div class="container">
+  <div class="row">
+    <div class="column dc__card-row1">
+      <div class="card dc__card-partner">
+        <div class="card-body">
+          <h2 class="card-title dc__card-heading">Partner with us</h2>
+          <p class="card-text dc__card-paragraph">
+            Join Deliveroo and reach more customers than ever. We handle
+            delivery, so you can focus on the food.
+          </p>
+          <a href="#" mat-stroked-button class="dc__card-button">Get Start</a>
+        </div>
+      </div>
+    </div>
+    <div class="column dc__card-row1">
+      <div class="card dc__card-rider">
+        <div class="card-body">
+          <h2 class="card-title dc__card-heading">Ride with us</h2>
+          <p class="card-text dc__card-paragraph">
+            The freedom to fit work around your life. Plus great fees, perks and
+            discounts.
+          </p>
+          <a href="#" mat-stroked-button class="dc__card-button">Get Start</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br />
+  <div class="row">
+    <div class="column dc__card-row1">
+      <div class="card dc__card-food">
+        <div class="card-body">
+          <h2 class="card-title dc__card-heading">Deliveroo For Work</h2>
+          <p class="card-text dc__card-paragraph">
+            Looking for a workplace food solution to reward your team, boost
+            morale or treat your clients? Our corporate team can help.
+          </p>
+          <a href="#" mat-stroked-button class="dc__card-button">Get Start</a>
+        </div>
+      </div>
+    </div>
+    <div class="column dc__card-row1">
+      <div class="card dc__card-voucher">
+        <div class="card-body">
+          <h2 class="card-title dc__card-heading">Gift Cards</h2>
+          <p class="card-text dc__card-paragraph">
+            Looking for an easy way to treat your friends and family? Give the
+            gift of great food with a Deliveroo gift card.
+          </p>
+          <a href="#" mat-stroked-button class="dc__card-button">Get Start</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br />
 </div>
