feat: discount area color
fix discount section text color in to #fff

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -125,7 +125,7 @@
     <div>
       <p class="dc__discount-para2">
         Service and delivery fees, subject to availability. Participating
-        restaurants only. T&Cs apply. <a href="">Terms</a>
+        restaurants only. T&Cs apply. <a href="" style="color: #fff">Terms</a>
       </p>
     </div>
   </div>
