--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
               height="32px"
             />
           </a>
-          <button mat-button class="dc__x-icon" (click)="drawer.toggle()">
+          <button mat-button (click)="onClose()">
             <a>
               <img src="assets\svg\x-icon.svg" alt="X" height="24" width="24" />
             </a>
@@ -61,14 +61,14 @@
       </div>
       <div class="container dc__lables">
         <div class="row">
-          <mat-form-field>
+          <mat-form-field appearance="outline">
             <select matNativeControl required class="dc__language">
               <option value="english">English</option>
             </select>
           </mat-form-field>
         </div>
         <div class="row dc__countries">
-          <mat-form-field>
+          <mat-form-field appearance="outline">
             <select matNativeControl required [ngModel]="defaultCountry">
               <option value="australia">Australia</option>
               <option value="belgium">Belgium</option>
