feat: responsiveness in track your oder section
responsiveness in track your oder

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -12,20 +12,27 @@
           <div style="padding-right: 4px">
             <button
               mat-stroked-button
-              class="dropdown-toggle d-none d-md-block dc__button"
+              class="d-none d-md-block dc__button"
               type="button"
-              id="dropdownMenuButton"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
             >
+              <img
+                src="assets\svg\header\drop-down.svg"
+                alt="drop-down"
+                height="15px"
+                width="15px"
+              />
               Partner with us
+              <!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <select matNativeControl required class="dc__language">
+                  <option value="english">English</option>
+                  <option value="english">English</option>
+                  <option value="english">English</option>
+                </select>
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div> -->
             </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
           </div>
           <div style="padding: 0px 4px 0px 4px">
             <button
