--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -65,6 +65,11 @@
     justify-content: space-between;
   }
 
+  &d__toc {
+    padding-top: 24px;
+    margin: 8px 32px;
+  }
+
   &__tocheading {
     font-family: tratos, sans-serif;
     font-size: 40px;
