feat: home page bootstrap card replace with mat cards
Bootstrap cards replace with angular materials cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
               height="32px"
             />
           </a>
-          <button mat-button (click)="onClose()">
+          <button mat-button (click)="drawer.toggle()">
             <a>
               <img src="assets\svg\x-icon.svg" alt="X" height="24" width="24" />
             </a>
