--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,7 +1,6 @@
-.dc {
+.dc-login {
   &__h1 {
     color: #2e3333;
-    font-family: plex-sans, sans-serif;
     font-size: 22px;
     line-height: 28px;
     font-weight: 700;
@@ -14,17 +13,15 @@
   &__text {
     text-align: justify;
   }
+
   &__button {
-    padding: 12px 0;
+    margin-top: 14px;
+    margin-bottom: 14px;
     font-weight: 600;
-    display: flex;
-    align-items: center;
 
     &--blue {
       background-color: #4c69ba;
-      margin-top: 14px;
-      margin-bottom: 14px;
-      font-weight: 600;
+
       color: aliceblue;
       height: 48px;
     }
