feat: create side nave component
create side nav component and add html and css files

--- a/src/app/common/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.html
@@ -1,6 +1,6 @@
-<!-- <mat-drawer-container class="example-container" autosize> -->
-<!-- <app-header (sidenav)="drawer.toggle()"></app-header> -->
-<!-- <mat-drawer #drawer class="sidenav dc__sidebar" mode="over" position="end">
+<mat-drawer-container class="example-container" autosize>
+  <app-header (sidenav)="drawer.toggle()"></app-header>
+  <mat-drawer #drawer class="sidenav dc__sidebar" mode="over" position="end">
     <div class="container dc dc__sidenav">
       <div class="row">
         <div class="col dc__nav-icons">
@@ -68,7 +68,7 @@
           </mat-form-field>
         </div>
         <div class="row dc__countries">
-          <mat-form-field appearance="outline">
+          <!-- <mat-form-field appearance="outline">
             <select matNativeControl required [ngModel]="defaultCountry">
               <option value="australia">Australia</option>
               <option value="belgium">Belgium</option>
@@ -84,15 +84,14 @@
               <option value="united arab amirates">United Arab Emirates</option>
               <option value="united kingdom">United Kingdom</option>
             </select>
-          </mat-form-field>
+          </mat-form-field> -->
         </div>
       </div>
     </div>
   </mat-drawer>
-  <div class="example-sidenav-content"> -->
-<app-header></app-header>
-<router-outlet></router-outlet>
-<br />
-<app-footer></app-footer>
-<!-- </div>
-</mat-drawer-container> -->
+  <div class="example-sidenav-content">
+    <router-outlet></router-outlet>
+    <br />
+    <app-footer></app-footer>
+  </div>
+</mat-drawer-container>
